--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <h1 class="h1-section">Digite os seus dados e escolha entre os três finalistas!</h1>
 
                 <form action="">
-                    <input type="text" name="Digite seu nome">
-                    <input type="email" name="Digite seu e-mail">  
+                    <input type="text" placeholder="Digite seu nome">
+                    <input type="email" placeholder="Digite seu e-mail">  
                 </form>
 
                 <div class="imagens">
