--- a/index.html
+++ b/index.html
@@ -4,42 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto 1 - Card de Games</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
         <header>
             <h1>GAMES LOVERS ENQUETE</h1>
         </header>
+
             <h2>Estamos escolhendo nessa enquete os melhores estilos de jogos entre os aficionados por <br>
-                video games. Participe da nossa enquete e escolha entre os três finalistas! <br></h2>
+                video games. Participe da nossa enquete e escolha entre os três finalistas!</h2>
             <h2>A sua escolha é muito importante para nós</h2>
             <h2>No final da enquete iremos sortear um <strong>brinde</strong> entre os participantes.</h2>
 
-
+        <br>
         <section>
                 <h1 class="h1-section">Digite os seus dados e escolha entre os três finalistas!</h1>
 
+                <br>
                 <form action="">
-                    <input type="text" placeholder="Digite seu nome">
+                    <input type="text" placeholder="Digite seu nome"> <br>
                     <input type="email" placeholder="Digite seu e-mail">  
                 </form>
 
+                <br>
+                <br>
+                <br>
+
                 <div class="imagens">
                     <div class="Esportes">
-                        <h2 class="voto">Esprotes</h2>
-                        <img src="Imagens/sports_soccer_white.svg" alt="">
-                        <button>Votar</button>
+                        <h2 class="voto">Esportes</h2>
+                        <img src="Imagens/sports_soccer_white.svg" alt="" width="200px">
+                        <button class="esporte">Votar</button>
                     </div>
 
                     <div class="Simulação">
                         <h2 class="voto">Simulação</h2>
-                        <img src="Imagens/local_airport_white.svg" alt="">
+                        <img src="Imagens/local_airport_white.svg" alt="" width="200px">
                         <button>Votar</button>
                     </div>
 
                     <div class="Estratégia">
                         <h2 class="voto">Estratégia</h2>
-                        <img src="Imagens/psychology_white.svg" alt="">
+                        <img src="Imagens/psychology_white.svg" alt="" width="200px">
                         <button>Votar</button>
                     </div>
                 </div>
